changes to help with scrolling issues on mobile

--- a/static/less/composer.less
+++ b/static/less/composer.less
@@ -12,7 +12,10 @@
 
 html.composing {
 	&.mobile {
-		overflow: hidden;
+		
+		body {
+			overflow: hidden;
+		}
 
 		.composer {
 			.composer-container {
